Separate ui and api

--- a/nginx/image-files/etc/nginx/nginx.conf
+++ b/nginx/image-files/etc/nginx/nginx.conf
@@ -25,12 +25,12 @@ http {
             return 301 /api/;
         }
 
-        location ~* ^/api/(.*) {
-            set $apiHost "server";
-            set $apiPort "3000";
-            rewrite /api/(.*) /api/$1 break;
+        location / {
+            set $frontendHost "server";
+            set $frontendPort "8080";
+            rewrite ^/(.*)$ /$1 break;
 
-            proxy_pass http://$apiHost:$apiPort/$1$is_args$args;
+            proxy_pass http://$frontendHost:$frontendPort/$1$is_args$args;
 
             proxy_redirect     off;
             proxy_set_header   Host $host;
@@ -40,12 +40,12 @@ http {
             proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
-        location / {
-            set $frontendHost "server";
-            set $frontendPort "8080";
-            rewrite ^/(.*)$ /$1 break;
+        location ~* ^/api/(.*) {
+            set $apiHost "server";
+            set $apiPort "3000";
+            rewrite /api/(.*) /$1 break;
 
-            proxy_pass http://$frontendHost:$frontendPort/$1$is_args$args;
+            proxy_pass http://$apiHost:$apiPort/$1$is_args$args;
 
             proxy_redirect     off;
             proxy_set_header   Host $host;
