Add some features

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
 	},
 	
 	"extensions": [
+		"Prisma.prisma"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
