--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "4.4.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.7.1"
   }
