--- a/ui/package.json
+++ b/ui/package.json
@@ -18,20 +18,23 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "core-js": "^3.25.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nuxt": "^2.15.8",
     "vee-validate": "3.2.5",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue-upload-drop-images": "^1.0.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
-    "@nuxtjs/eslint-config": "^11.0.0",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.5.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
